pebble_tool/util/static/stylesheets/sensors.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Trebuchet MS', sans-serif;
  padding-top: 2.5rem;
  text-align: center;
}
input[type=range] {
  -webkit-appearance: none;
  margin: 18px 0;
  width: 80%;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 80%;
  height: 8.4px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #3071a9;
  border-radius: 1.3px;
  border: 0.2px solid #010101;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -14px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #367ebd;
}
input[type=range]::-moz-range-track {
  width: 80%;
  height: 8.4px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #3071a9;
  border-radius: 1.3px;
  border: 0.2px solid #010101;
}
input[type=range]::-moz-range-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 80%;
  height: 8.4px;
  cursor: pointer;
  animate: 0.2s;
  background: transparent;
  border-color: transparent;
  border-width: 16px 0;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #2a6495;
  border: 0.2px solid #010101;
  border-radius: 2.6px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range]::-ms-fill-upper {
  background: #3071a9;
  border: 0.2px solid #010101;
  border-radius: 2.6px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range]::-ms-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 36px;
  width: 16px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
}
input[type=range]:focus::-ms-fill-lower {
  background: #3071a9;
}
input[type=range]:focus::-ms-fill-upper {
  background: #367ebd;
}
h1 {
  font-size: 1.4rem;
  margin: 0;
}
.state {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  padding: 0.5em;
  background-color: #aa0000;
  color: #fff;
  text-transform: uppercase;
}
.stuff {
}
.compass-container {
  padding: 1rem;
}
.compass {
  width: 50%;
  overflow: hidden;
  float: left;
  position: relative;
}
.compass-text {
  width: 50%;
  float: right;
  padding-top: 20%;
}
.compass img {
  width: 100%;
}
.compass-bg {
  position: relative;
  z-index: 0;
}
.needle {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
}
.accel {
  width: 100%;
  text-align: center;
  clear: both;
  padding-top: 1rem;
}
.pebble-heading, .pebble-accel-x, .pebble-accel-y, .pebble-accel-z {
  font-weight: bold;
}
label {
  margin-bottom: 0.5rem;
}

